--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   dio_cache_interceptor: ^3.3.1
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.2
+  freezed: ^2.2.0
+  json_serializable: ^6.5.3
 
 flutter:
 
