--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   dio_cache_interceptor: ^3.3.1
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
+  retrofit: ^3.3.1
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -22,6 +24,7 @@ dev_dependencies:
   build_runner: ^2.3.2
   freezed: ^2.2.0
   json_serializable: ^6.5.3
+  retrofit_generator: ^4.2.0
 
 flutter:
 
